--- a/flask_app/templates/display_recipe.html
+++ b/flask_app/templates/display_recipe.html
@@ -45,7 +45,7 @@
   <div class="container-fluid">
     <div class="row view">
 
-      <div class="col-2">
+      <div class="col-2 ">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 mt-2">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">All</a>
@@ -84,82 +84,99 @@
             <h4>Posted By: {{recipe.user.first_name}} {{recipe.user.last_name}}</h4>
           </div>
           <div class="row">
-            <div class="col-2">
-              <p>Description:</p>
+            <div class="col-9">
+
+              <div class="row">
+                <div class="col-2">
+                  <p>Description:</p>
+                </div>
+                <div class="col-10">
+                  <p>{{recipe.description}}</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-2">
+                  <p>Instructions:</p>
+                </div>
+                <div class="col-10">
+                  <p>{{recipe.instructions}}</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-2">
+                  <p>Category:</p>
+                </div>
+                <div class="col-10">
+                  <p>{{recipe.category}}</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-2">
+                  <p>Course:</p>
+                </div>
+                <div class="col-10">
+                  <p>{{recipe.course}}</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-2">
+                  <p>Servings:</p>
+                </div>
+                <div class="col-10">
+                  <p>{{recipe.servings}}</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-2">
+                  <p>Meal of the day:</p>
+                </div>
+                <div class="col-10">
+                  <p>{{recipe.meal_of_day}}</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-2">
+                  <p>Cook time:</p>
+                </div>
+                <div class="col-10">
+                  <p>{{recipe.cook_time}}</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-2">
+                  <p>Favorite:</p>
+                </div>
+                <div class="col-10">
+                  {% if recipe.is_favorite == 1 %}
+                  <p>Yes</p>
+                  {% else %}
+                  <p>No</p>
+                  {% endif %}
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-2">
+                  <p>Image:</p>
+                </div>
+                <div class="col-10">
+                  <p>{{recipe.image}}</p>
+                </div>
+              </div>
             </div>
-            <div class="col-10">
-              <p>{{recipe.description}}</p>
+            <div class="col-3">
+              <p>Ingredients:</p>
+              <ul>
+                {% if recipe.ingredients %}
+                {% for ingredient in recipe.ingredients %}
+                <li>{{ingredient.name}} - {{ingredient.quantity}} {{ingredient.unit}}</li>
+                {%endfor%}
+                {%endif%}
+              </ul>
             </div>
           </div>
-          <div class="row">
-            <div class="col-2">
-              <p>Instructions:</p>
-            </div>
-            <div class="col-10">
-              <p>{{recipe.instructions}}</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-2">
-              <p>Category:</p>
-            </div>
-            <div class="col-10">
-              <p>{{recipe.category}}</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-2">
-              <p>Course:</p>
-            </div>
-            <div class="col-10">
-              <p>{{recipe.course}}</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-2">
-              <p>Servings:</p>
-            </div>
-            <div class="col-10">
-              <p>{{recipe.servings}}</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-2">
-              <p>Meal of the day:</p>
-            </div>
-            <div class="col-10">
-              <p>{{recipe.meal_of_day}}</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-2">
-              <p>Cook time:</p>
-            </div>
-            <div class="col-10">
-              <p>{{recipe.cook_time}}</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-2">
-              <p>Favorite:</p>
-            </div>
-            <div class="col-10">
-              {% if recipe.is_favorite == 1 %}
-              <p>Yes</p>
-              {% else %}
-              <p>No</p>
-              {% endif %}
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-2">
-              <p>Image:</p>
-            </div>
-            <div class="col-10">
-              <p>{{recipe.image}}</p>
-            </div>
-          </div>
+
         </div>
+
       </div>
 
 
