--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -25,7 +25,7 @@
       <a class="nav-link active" aria-current="page" href="/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Shopping</a>
+      <a class="nav-link" href="/shopping_list">Shopping</a>
     </li>
     <li class="nav-item">
       <a class="nav-link disabled" href="#">Cookbooks</a>
