--- a/flask_app/templates/display_recipe.html
+++ b/flask_app/templates/display_recipe.html
@@ -22,10 +22,10 @@
   </nav>
   <ul class="nav nav-underline justify-content-around">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="/">Home</a>
+      <a class="nav-link" aria-current="page" href="/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Shopping</a>
+      <a class="nav-link" href="/shopping_list">Shopping</a>
     </li>
     <li class="nav-item">
       <a class="nav-link disabled" href="#">Cookbooks</a>
@@ -172,6 +172,7 @@
                 {%endfor%}
                 {%endif%}
               </ul>
+              <a class="btn btn-primary" href="/shopping_list/add/{{recipe.id}}">Add to shopping list</a>
             </div>
           </div>
 
