--- a/flask_app/templates/display_shopping_list.html
+++ b/flask_app/templates/display_shopping_list.html
@@ -6,7 +6,6 @@
   <title>Recipe Book</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
 </head>
 <body>
@@ -26,7 +25,7 @@
       <a class="nav-link" aria-current="page" href="/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/shopping_list">Shopping</a>
+      <a class="nav-link active" href="/shopping_list">Shopping</a>
     </li>
     <li class="nav-item">
       <a class="nav-link disabled" href="#">Cookbooks</a>
@@ -35,7 +34,7 @@
       <a class="nav-link disabled" href="#">Planning</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link active" href="/ingredients">Ingredients</a>
+      <a class="nav-link" href="/ingredients">Ingredients</a>
     </li>
     <li class="nav-item">
       <a class="nav-link disabled">Settings</a>
@@ -46,21 +45,22 @@
   <div class="container-fluid">
     <div class="row view">
 
-      <div class="col-2">
+      <div class="col-2 ">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 mt-2">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">All</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Protein</a>
+            <a class="nav-link" aria-current="page" href="#">Favorites</a>
           </li>
           <li class="nav-item">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Vegtables
+              Courses
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Action</a></li>
               <li><a class="dropdown-item" href="#">Another action</a></li>
+
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -77,66 +77,38 @@
 
 
       <div class="col-10 p-4 pt-0 mt-3 view-height overflow-auto">
+
         <div class="card p-3">
+          <div class="d-flex justify-content-between align-items-baseline mb-4">
+            <h2>{{shopping_list.name}}</h2>
+          </div>
           <div class="row">
-            <div class="col-5">
-              <table class="table table-striped">
-                <thead>
-                  <tr>
-                    <th scope="col">Ingredient</th>
-                    <th class="text-center" scope="col">Delete</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {% for ingredient in ingredients %}
-                  <tr>
-                    <td class="w-100">{{ingredient.name}}</td>
-                    <td class="text-center">
-                      <a href="/ingredient/{{ingredient.id}}/delete" class="btn btn-danger btn-sm">
-                        <i class="fa-solid fa-trash"></i>
-                      </a>
-                    </td>
-                  </tr>
-                  {% endfor %}
-                </tbody>
-              </table>
+            <div class="col-9">
 
+              <div class="row">
+                <div class="col-3">
+                  <p>Items:</p>
+                  <ul class="list-unstyled">
+                    {% for item in shopping_list.items%}
+                    <li><input class="form-check-input" type="checkbox"> {{item.name}} - {{item.quantity}} {{item.unit}}
+                    </li>
+                    {%endfor%}
+
+                  </ul>
+                </div>
+              </div>
 
             </div>
-            <div class="col-2"></div>
 
-            <div class="col-4">
-              <form action="/ingredient/create" method="post">
-                <label for="name" class="form-label">Name:</label>
-                <input type="text" name="name" class="form-control mb-3">
-                <button class="btn btn-primary mb-2">
-                  <i class="fa-solid fa-plus"></i> Create New Ingredient
-                </button>
-              </form>
-            </div>
           </div>
 
+
+
         </div>
-
-
-
-
-
-      </div>
-    </div>
-
-
-
-
-
-
-  </div>
-  </div>
-
-  <script src="https://kit.fontawesome.com/e71eff5305.js" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/e71eff5305.js" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+          crossorigin="anonymous"></script>
 </body>
 </html>
