--- a/flask_app/templates/new_recipe.html
+++ b/flask_app/templates/new_recipe.html
@@ -28,7 +28,7 @@
       <a class="nav-link" aria-current="page" href="/">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Shopping</a>
+      <a class="nav-link" href="/shopping_list">Shopping</a>
     </li>
     <li class="nav-item">
       <a class="nav-link disabled" href="#">Cookbooks</a>
